Create VillaNumber GET

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components;
 @model IEnumerable<Web.Models.Dto.Villa.VillaDTO>
 
-<img class="d-block w-100" src="~/images/home/slide1.jpg" alt="">
+<img class="d-block w-100" src="~/images/home/slide1.jpg" alt="" />
 <hr />
 <div class="row" style="--bs-gutter-x:0">
     @foreach (var villa in Model)
