--- a/Web/Views/Shared/_Notification.cshtml
+++ b/Web/Views/Shared/_Notification.cshtml
@@ -1,27 +1,25 @@
-﻿<script src="~/lib/limonte-sweetalert2/sweetalert2.js"></script>
+﻿<script src="~/lib/limonte-sweetalert2/sweetalert2.min.js"></script>
 @if (TempData["success"] != null)
 {
     <script type="text/javascript">
         Swal.fire({
-            position: 'top-end',
             icon: 'success',
             title: '@TempData["success"]',
             showConfirmButton: false,
             timer: 3000,
             timerProgressBar: true
-        })
+        });
     </script>
 }
 @if (TempData["error"] != null)
 {
     <script type="text/javascript">
         Swal.fire({
-            position: 'top-end',
             icon: 'error',
             title: '@TempData["error"]',
             showConfirmButton: false,
             timer: 3000,
             timerProgressBar: true
-        })
+        });
     </script>
 }
